--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <input pattern="[0-9]*" type="text">
   </label>
 </p>
-
+<p>
+  <label>inputmode-pattern-text
+    <input inputmode="numeric" pattern="[0-9]*" type="text">
+  </label>
+</p>
+  
 </body></html>
 
