--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <input inputmode="numeric" pattern="[0-9]*" type="text">
   </label>
 </p>
+
+<p>
+  <label>inputmode-pattern-text-oninput
+    <input inputmode="numeric" pattern="[0-9]*" type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
+  </label>
+</p>
   
 </body></html>
 
